@@ -10,9 +10,12 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import com.example.demo.exception.ResourceNotFoundException;
+import com.example.demo.exception.BadRequestException;
+
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+
 
 @Service @RequiredArgsConstructor
 @Slf4j
@@ -29,11 +32,21 @@ public class CardService {
     private final ReminderService reminderService;
     private final WebSocketNotificationService webSocketNotificationService;
 
+    private static final String EVENT_CARD_CREATED = "card.created";
+    private static final String EVENT_CARD_UPDATED = "card.updated";
+    private static final String CARD_ENTITY = "CARD";
+
+    private static final String CARD_NOT_FOUND = "Card not found";
+    private static final String COLUMN_NOT_FOUND = "Column not found";
+    private static final String BOARD_NOT_FOUND = "Board not found";
+    private static final String USER_NOT_FOUND = "User not found";
+
     @Transactional
     public CardDto create(Long boardId, CardRequest req, Long userId) {
         log.info("Creating card '{}' on board {} for user {}", req.getTitle(), boardId, userId);
         boardService.checkPermission(boardId, userId, BoardMember.Role.EDITOR);
-        BoardColumn col = columnRepository.findById(req.getColumnId()).orElseThrow();
+        BoardColumn col = columnRepository.findById(req.getColumnId())
+                .orElseThrow(() -> new ResourceNotFoundException(COLUMN_NOT_FOUND));
         int pos = cardRepository.countByColumnIdAndArchivedFalse(col.getId());
         log.debug("Creating card at position {} in column {}", pos, col.getId());
 
@@ -61,8 +74,10 @@ public class CardService {
         }
         log.debug("Added {} labels to card {}", card.getLabels().size(), card.getId());
 
-        Board board = boardRepository.findById(boardId).orElseThrow();
-        User user = userRepository.findById(userId).orElseThrow();
+        Board board = boardRepository.findById(boardId)
+                .orElseThrow(() -> new ResourceNotFoundException(BOARD_NOT_FOUND));
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
 
         if (req.getDueDate() != null && req.getReminderType() != null) {
             try {
@@ -73,11 +88,11 @@ public class CardService {
             }
         }
 
-        activityService.log(board, user, "CREATED_CARD", "CARD", card.getId());
+        activityService.log(board, user, "CREATED_CARD", CARD_ENTITY, card.getId());
         CardDto dto = CardDto.from(card);
         log.info("Card '{}' created successfully with id {}", card.getTitle(), card.getId());
 
-        broadcastSafely(boardId, "card.created", userId, user.getFullName(), dto);
+        broadcastSafely(boardId, EVENT_CARD_CREATED, userId, user.getFullName(), dto);
 
         return dto;
     }
@@ -85,7 +100,8 @@ public class CardService {
     @Transactional
     public CardDto update(Long cardId, CardRequest req, Long userId) {
         log.info("Updating card {} by user {}", cardId, userId);
-        Card card = cardRepository.findById(cardId).orElseThrow();
+        Card card = cardRepository.findById(cardId)
+                .orElseThrow(() -> new ResourceNotFoundException(CARD_NOT_FOUND));
         Long boardId = card.getColumn().getBoard().getId();
         boardService.checkPermission(boardId, userId, BoardMember.Role.EDITOR);
         log.debug("Updating card {} in board {}", cardId, boardId);
@@ -115,8 +131,10 @@ public class CardService {
         log.debug("Updated labels for card {}. Label count={}", cardId, card.getLabels().size());
 
         card = cardRepository.save(card);
-        Board board = boardRepository.findById(boardId).orElseThrow();
-        User user = userRepository.findById(userId).orElseThrow();
+        Board board = boardRepository.findById(boardId)
+                .orElseThrow(() -> new ResourceNotFoundException(BOARD_NOT_FOUND));
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
 
         if (req.getDueDate() != null && req.getReminderType() != null) {
             try {
@@ -129,11 +147,11 @@ public class CardService {
             reminderService.deleteCardReminders(cardId);
         }
 
-        activityService.log(board, user, "UPDATED_CARD", "CARD", card.getId());
+        activityService.log(board, user, "UPDATED_CARD", CARD_ENTITY, card.getId());
         CardDto dto = CardDto.from(card);
         log.info("Card {} updated successfully", cardId);
 
-        broadcastSafely(boardId, "card.updated", userId, user.getFullName(), dto);
+        broadcastSafely(boardId, EVENT_CARD_UPDATED, userId, user.getFullName(), dto);
 
         return dto;
     }
@@ -142,7 +160,8 @@ public class CardService {
     @Transactional
     public CardDto updatePriority(Long cardId, String priorityStr, Long userId) {
         log.info("Updating priority of card {} to {} by user {}", cardId, priorityStr, userId);
-        Card card = cardRepository.findById(cardId).orElseThrow();
+        Card card = cardRepository.findById(cardId)
+                .orElseThrow(() -> new ResourceNotFoundException(CARD_NOT_FOUND));
         Long boardId = card.getColumn().getBoard().getId();
         boardService.checkPermission(boardId, userId, BoardMember.Role.EDITOR);
 
@@ -153,34 +172,32 @@ public class CardService {
         }
         card = cardRepository.save(card);
 
-        Board board = boardRepository.findById(boardId).orElseThrow();
-        User user = userRepository.findById(userId).orElseThrow();
-        activityService.log(board, user, "SET_PRIORITY_" + priorityStr, "CARD", cardId);
+        Board board = boardRepository.findById(boardId)
+                .orElseThrow(() -> new ResourceNotFoundException(BOARD_NOT_FOUND));
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
+        activityService.log(board, user, "SET_PRIORITY_" + priorityStr, CARD_ENTITY, cardId);
 
         CardDto dto = CardDto.from(card);
         log.info("Card {} priority updated to {}", cardId, priorityStr);
 
-        broadcastSafely(boardId, "card.updated", userId, user.getFullName(), dto);
+        broadcastSafely(boardId, EVENT_CARD_UPDATED, userId, user.getFullName(), dto);
 
         return dto;
     }
     
- // ============================================================
-    // ADD this method to your existing CardService.java
-    // Place it after the updatePriority() method
-    // ============================================================
-
     @Transactional
     public CardDto assignCard(Long cardId, Long assigneeId, Long userId) {
         log.info("Assigning card {} to user {} by user {}", cardId, assigneeId, userId);
-        Card card = cardRepository.findById(cardId).orElseThrow();
+        Card card = cardRepository.findById(cardId)
+                .orElseThrow(() -> new ResourceNotFoundException(CARD_NOT_FOUND));
         Long boardId = card.getColumn().getBoard().getId();
         boardService.checkPermission(boardId, userId, BoardMember.Role.EDITOR);
 
         if (assigneeId != null) {
             // Verify assignee is a board member
             User assignee = userRepository.findById(assigneeId)
-                    .orElseThrow(() -> new RuntimeException("User not found"));
+                    .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
             boardService.checkAccess(boardId, assigneeId); // Ensures they're a member
             card.setAssignee(assignee);
         } else {
@@ -190,30 +207,28 @@ public class CardService {
 
         card = cardRepository.save(card);
 
-        Board board = boardRepository.findById(boardId).orElseThrow();
-        User user = userRepository.findById(userId).orElseThrow();
+        Board board = boardRepository.findById(boardId)
+                .orElseThrow(() -> new ResourceNotFoundException(BOARD_NOT_FOUND));
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
 
         String action = assigneeId != null ? "ASSIGNED_CARD" : "UNASSIGNED_CARD";
-        activityService.log(board, user, action, "CARD", cardId);
+        activityService.log(board, user, action, CARD_ENTITY, cardId);
 
         CardDto dto = CardDto.from(card);
         log.info("Card {} assignee updated successfully", cardId);
 
-        broadcastSafely(boardId, "card.updated", userId, user.getFullName(), dto);
+        broadcastSafely(boardId, EVENT_CARD_UPDATED, userId, user.getFullName(), dto);
 
         return dto;
     }
     
     
- // ============================================================
-    // ADD these 2 methods to your existing CardService.java
-    // Place them after the assignCard() method
-    // ============================================================
-
     @Transactional
     public CardDto duplicate(Long cardId, Long userId) {
         log.info("Duplicating card {} by user {}", cardId, userId);
-        Card original = cardRepository.findById(cardId).orElseThrow();
+        Card original = cardRepository.findById(cardId)
+                .orElseThrow(() -> new ResourceNotFoundException(CARD_NOT_FOUND));
         Long boardId = original.getColumn().getBoard().getId();
         boardService.checkPermission(boardId, userId, BoardMember.Role.EDITOR);
 
@@ -237,14 +252,16 @@ public class CardService {
             copy.getLabels().add(newLabel);
         }
 
-        Board board = boardRepository.findById(boardId).orElseThrow();
-        User user = userRepository.findById(userId).orElseThrow();
-        activityService.log(board, user, "DUPLICATED_CARD", "CARD", copy.getId());
+        Board board = boardRepository.findById(boardId)
+                .orElseThrow(() -> new ResourceNotFoundException(BOARD_NOT_FOUND));
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
+        activityService.log(board, user, "DUPLICATED_CARD", CARD_ENTITY, copy.getId());
 
         CardDto dto = CardDto.from(copy);
         log.info("Card {} duplicated as card {}", cardId, copy.getId());
 
-        broadcastSafely(boardId, "card.created", userId, user.getFullName(), dto);
+        broadcastSafely(boardId, EVENT_CARD_CREATED, userId, user.getFullName(), dto);
 
         return dto;
     }
@@ -252,12 +269,13 @@ public class CardService {
     @Transactional
     public CardDto restore(Long cardId, Long userId) {
         log.info("Restoring card {} by user {}", cardId, userId);
-        Card card = cardRepository.findById(cardId).orElseThrow();
+        Card card = cardRepository.findById(cardId)
+                .orElseThrow(() -> new ResourceNotFoundException(CARD_NOT_FOUND));
         Long boardId = card.getColumn().getBoard().getId();
         boardService.checkPermission(boardId, userId, BoardMember.Role.EDITOR);
 
         if (!card.isArchived()) {
-            throw new RuntimeException("Card is not archived");
+            throw new BadRequestException("Card is not archived");
         }
 
         card.setArchived(false);
@@ -265,14 +283,16 @@ public class CardService {
         card.setPosition(pos);
         card = cardRepository.save(card);
 
-        Board board = boardRepository.findById(boardId).orElseThrow();
-        User user = userRepository.findById(userId).orElseThrow();
-        activityService.log(board, user, "RESTORED_CARD", "CARD", card.getId());
+        Board board = boardRepository.findById(boardId)
+                .orElseThrow(() -> new ResourceNotFoundException(BOARD_NOT_FOUND));
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
+        activityService.log(board, user, "RESTORED_CARD", CARD_ENTITY, card.getId());
 
         CardDto dto = CardDto.from(card);
         log.info("Card {} restored successfully", cardId);
 
-        broadcastSafely(boardId, "card.created", userId, user.getFullName(), dto);
+        broadcastSafely(boardId, EVENT_CARD_CREATED, userId, user.getFullName(), dto);
 
         return dto;
     }
@@ -281,7 +301,7 @@ public class CardService {
         log.info("Fetching archived cards for board {} by user {}", boardId, userId);
         boardService.checkAccess(boardId, userId);
         List<Card> cards = cardRepository.findByColumnBoardIdAndArchivedTrue(boardId);
-        return cards.stream().map(CardDto::from).collect(Collectors.toList());
+        return cards.stream().map(CardDto::from).toList();
     }
     
     
@@ -290,7 +310,8 @@ public class CardService {
     @Transactional
     public CardDto move(Long cardId, MoveCardRequest req, Long userId) {
         log.info("Moving card {} to column {} position {} by user {}", cardId, req.getTargetColumnId(), req.getNewPosition(), userId);
-        Card card = cardRepository.findById(cardId).orElseThrow();
+        Card card = cardRepository.findById(cardId)
+                .orElseThrow(() -> new ResourceNotFoundException(CARD_NOT_FOUND));
         Long boardId = card.getColumn().getBoard().getId();
         boardService.checkPermission(boardId, userId, BoardMember.Role.EDITOR);
 
@@ -298,7 +319,8 @@ public class CardService {
         log.debug("Card {} current column {} position {}", cardId, sourceColumnId, card.getPosition());
 
         BoardColumn sourceCol = card.getColumn();
-        BoardColumn targetCol = columnRepository.findById(req.getTargetColumnId()).orElseThrow();
+        BoardColumn targetCol = columnRepository.findById(req.getTargetColumnId())
+                .orElseThrow(() -> new ResourceNotFoundException(COLUMN_NOT_FOUND));
 
         cardRepository.decrementPositionsAfter(sourceCol.getId(), card.getPosition());
         cardRepository.incrementPositionsFrom(targetCol.getId(), req.getNewPosition());
@@ -306,9 +328,11 @@ public class CardService {
         card.setPosition(req.getNewPosition());
         card = cardRepository.save(card);
 
-        Board board = boardRepository.findById(boardId).orElseThrow();
-        User user = userRepository.findById(userId).orElseThrow();
-        activityService.log(board, user, "MOVED_CARD", "CARD", card.getId());
+        Board board = boardRepository.findById(boardId)
+                .orElseThrow(() -> new ResourceNotFoundException(BOARD_NOT_FOUND));
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
+        activityService.log(board, user, "MOVED_CARD", CARD_ENTITY, card.getId());
         CardDto dto = CardDto.from(card);
         log.info("Card {} moved successfully", cardId);
 
@@ -325,7 +349,8 @@ public class CardService {
 
     public CardDto getCard(Long cardId, Long userId) {
         log.info("Fetching card {} for user {}", cardId, userId);
-        Card card = cardRepository.findById(cardId).orElseThrow();
+        Card card = cardRepository.findById(cardId)
+                .orElseThrow(() -> new ResourceNotFoundException(CARD_NOT_FOUND));
         boardService.checkAccess(card.getColumn().getBoard().getId(), userId);
         log.debug("Card {} belongs to board {}", cardId, card.getColumn().getBoard().getId());
         CardDto dto = CardDto.from(card);
@@ -336,7 +361,8 @@ public class CardService {
     @Transactional
     public CardDto archive(Long cardId, Long userId) {
         log.info("Archiving card {} by user {}", cardId, userId);
-        Card card = cardRepository.findById(cardId).orElseThrow();
+        Card card = cardRepository.findById(cardId)
+                .orElseThrow(() -> new ResourceNotFoundException(CARD_NOT_FOUND));
         Long boardId = card.getColumn().getBoard().getId();
         boardService.checkPermission(boardId, userId, BoardMember.Role.EDITOR);
         log.debug("Archiving card {} in board {}", cardId, boardId);
@@ -344,9 +370,11 @@ public class CardService {
         card.setArchived(true);
         card = cardRepository.save(card);
 
-        Board board = boardRepository.findById(boardId).orElseThrow();
-        User user = userRepository.findById(userId).orElseThrow();
-        activityService.log(board, user, "ARCHIVED_CARD", "CARD", card.getId());
+        Board board = boardRepository.findById(boardId)
+                .orElseThrow(() -> new ResourceNotFoundException(BOARD_NOT_FOUND));
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
+        activityService.log(board, user, "ARCHIVED_CARD", CARD_ENTITY, card.getId());
         CardDto dto = CardDto.from(card);
         log.info("Card {} archived successfully", cardId);
 
@@ -357,8 +385,9 @@ public class CardService {
 
     public List<CommentDto> getComments(Long cardId) {
         log.info("Fetching comments for card {}", cardId);
-        Card card = cardRepository.findById(cardId).orElseThrow();
-        List<CommentDto> comments = card.getComments().stream().map(CommentDto::from).collect(Collectors.toList());
+        Card card = cardRepository.findById(cardId)
+                .orElseThrow(() -> new ResourceNotFoundException(CARD_NOT_FOUND));
+        List<CommentDto> comments = card.getComments().stream().map(CommentDto::from).toList();
         log.debug("Fetching {} comments for card {}", comments.size(), cardId);
         log.info("Comments fetched successfully for card {}", cardId);
         return comments;
@@ -366,7 +395,8 @@ public class CardService {
 
     public PageResponse<CommentDto> getComments(Long cardId, int page, int size) {
         log.info("Fetching comments for card {} with page {} and size {}", cardId, page, size);
-        Card card = cardRepository.findById(cardId).orElseThrow();
+        Card card = cardRepository.findById(cardId)
+                .orElseThrow(() -> new ResourceNotFoundException(CARD_NOT_FOUND));
         Page<Comment> comments = commentRepository.findByCardIdOrderByCreatedAtDesc(
                 card.getId(),
                 PageRequest.of(page, size, Sort.by("createdAt").descending())
@@ -381,7 +411,7 @@ public class CardService {
     public void delete(Long cardId, Long userId) {
         log.info("Deleting card {} by user {}", cardId, userId);
         Card card = cardRepository.findById(cardId)
-                .orElseThrow(() -> new RuntimeException("Card not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Card not found"));
         Long boardId = card.getColumn().getBoard().getId();
         Long columnId = card.getColumn().getId();
         int position = card.getPosition();
@@ -390,14 +420,16 @@ public class CardService {
 
         boardService.checkPermission(boardId, userId, BoardMember.Role.EDITOR);
 
-        Board board = boardRepository.findById(boardId).orElseThrow();
-        User user = userRepository.findById(userId).orElseThrow();
+        Board board = boardRepository.findById(boardId)
+                .orElseThrow(() -> new ResourceNotFoundException(BOARD_NOT_FOUND));
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
 
         commentRepository.deleteByCardId(cardId);
         cardLabelRepository.deleteAllByCardId(cardId);
         reminderService.deleteCardReminders(cardId);
 
-        activityService.log(board, user, "Deleted card: " + title, "CARD", cardId);
+        activityService.log(board, user, "Deleted card: " + title, CARD_ENTITY, cardId);
         cardRepository.delete(card);
 
         if (!archived) {
